frontend/src/style/index.scss
@import "_vars.scss";

* {
  font-family: -apple-system, BlinkMacSystemFont, Arial, Roboto, Open Sans, Helvetica Neue, Roboto, sans-serif !important;
  user-select: none;
}

body {
  user-select: none;
  margin: 0;
  padding: 0;
  background: #FFF;
  color: #000;
  direction: ltr;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-tap-highlight-color: transparent;
  -ms-overflow-style: none;
}

/* total width */
*::-webkit-scrollbar {
  background-color:#fff;
  width: 10px
}

*::-webkit-scrollbar-track {
  background-color: #fff
}

*::-webkit-scrollbar-thumb {
  background-color: #babac0;
  border-radius: 16px;
  border: 2px solid #fff
}

*::-webkit-scrollbar-button {
  display: none;
}

body[scheme="space_gray"] {
  --background_page: #0a0a0a;
}

.PanelHeader {
  &__content {
    overflow: visible;
  }
}

button::-moz-focus-inner {
  border: 0;
}

